fix logo squished in mobile cart

--- a/themes/harmony/styles/navbar.scss
+++ b/themes/harmony/styles/navbar.scss
@@ -277,6 +277,8 @@
 
     img {
       max-height: 40px;
+      max-width: 100%;
+      width: fit-content;
     }
   }
 
